<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note Subtitle</string>
    <string name="textDateTime">DateTime</string>
    <string name="type_note_here">Taper le texte ici...</string>
    <string name="miscellaneous">Options</string>
    <string name="pick_color">selection de la couleur :</string>
    <string name="add_image">ajouter une image</string>
    <string name="add_url">ajouter un url</string>
    <string name="enter_url">entrer url</string>
    <string name="add">ajouter</string>
    <string name="delete_note">Effacer Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Êtes-vous sûr de vouloir supprimer cette note ?</string>
    <string name="cancel_dialog">Annuler</string>
    <string name="add_tag">Add tag</string>
    <string name="delete_or_recover_note">Delete or recover note</string>
    <string name="cancel">Cancel</string>
    <string name="Trash" >Trash</string>
    <string name="todo">TODO</string>
    <string name="noteback">Note Back</string>
    <string name="Do_you_want_to_delete_or_recover_this_note">Do you want to delete or recover this note</string>
    <string name="Recover">Recover</string>

</resources>