<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutNoteTrashContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/background_dialog">

    <ImageView
        android:id="@+id/ImageDeleteNote"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/colorWhite" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"

        android:includeFontPadding="false"
        android:text="@string/Do_you_want_to_delete_or_recover_this_note"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ImageDeleteNote"
        app:layout_constraintTop_toTopOf="@id/ImageDeleteNote" />

    <TextView
        android:id="@+id/textCancel"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRecover"
        android:layout_width="82dp"
        android:layout_height="40dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="80dp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/Recover"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDeleteNote"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="81dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/delete_note"
        android:textAllCaps="true"
        android:textColor="#FF6E40"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>